Fixed issue with sorting on mobile.

--- a/src/app/assets/scss/partials/_shop.scss
+++ b/src/app/assets/scss/partials/_shop.scss
@@ -116,9 +116,10 @@
 		}
 	}
 
-	.text-right span, 
 	.text-right select {
 		margin-left: 10px;
+		width: auto;
+		display: inline-block;
 	}
 }
 
